# winwire

./: .gitignore  CMakeLists.txt  README.md
scripts/: rebuild.ps1
src/: CMakeLists.txt  winwire.c  winwireConfig.cmake
src/include/winwire/: winwire.h
